k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wander-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: aavams.shop
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wander-app
            port:
              number: 3000
